tests/ui/dis/ptr_copy.normal.stderr
error: cannot memcpy dynamically sized data
    --> $CORE_SRC/intrinsics.rs:2776:9
     |
2776 |         copy(src, dst, count)
     |         ^^^^^^^^^^^^^^^^^^^^^
     |
note: used from within `core::intrinsics::copy::<f32>`
    --> $CORE_SRC/intrinsics.rs:2762:21
     |
2762 | pub const unsafe fn copy<T>(src: *const T, dst: *mut T, count: usize) {
     |                     ^^^^
note: called by `ptr_copy::copy_via_raw_ptr`
    --> $DIR/ptr_copy.rs:28:18
     |
28   |         unsafe { core::ptr::copy(src, dst, 1) }
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `ptr_copy::main`
    --> $DIR/ptr_copy.rs:33:5
     |
33   |     copy_via_raw_ptr(&i, o);
     |     ^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main`
    --> $DIR/ptr_copy.rs:32:8
     |
32   | pub fn main(i: f32, o: &mut f32) {
     |        ^^^^

error: aborting due to 1 previous error

